--- a/example.html
+++ b/example.html
@@ -35,52 +35,83 @@
 
 <section id="section" class="slide level1">
 <h1></h1>
-<h3 id="india-portal-2.0">India Portal 2.0</h3>
-<p>Project Review Meeting for june 2023 K&amp;A team 5 july 2023</p>
+<p style="color:orangered">
+India Portal 2.0
+</p>
+<p style="font-size:20px">
+Project Review Meeting for june 2023 K&amp;A team 5 july 2023
+</p>
 </section>
 <section id="section-1" class="slide level1">
 <h1></h1>
-<h3 id="agenda">Agenda</h3>
-<ul>
-<li>Milestone 1 Scope of Work</li>
-<li>Data Analysis</li>
-<li>Current Project Team Organization</li>
-<li>SW Architecture View</li>
-<li>Going forward</li>
-<li>A glimpse of future milestones</li>
+<p style=";color:orangered">
+Agenda
+</p>
+<ul style="font-size:20px">
+<li>
+Milestone 1 Scope of Work
+</li>
+<li>
+Data Analysis
+</li>
+<li>
+Current Project Team Organization
+</li>
+<li>
+SW Architecture View
+</li>
+<li>
+Going forward
+</li>
+<li>
+A glimpse of future milestones
+</li>
 </ul>
+<!-- 
++ Milestone 1 Scope of Work
++ Data Analysis
++ Current Project Team Organization
++ SW Architecture View
++ Going forward
++ A glimpse of future milestones -->
 </section>
 <section id="section-2" class="slide level1">
 <h1></h1>
-<div style="display:flex;width:100%;height:100%;">
-<div style="width:50%;height:700px;align-item:center;padding-top:35%;">
+<div
+style="display:flex;width:100%;height:100%;border:4px solid orangered">
+<div
+style="width:50%;height:700px;align-item:center;padding-top:35%;;color:orangered;font-size:40px">
 Scope of Work
 </div>
 <div
 style="width:50%;height:700px;background-color:teal;align-item:center;padding-top:35%;">
+<p style="font-size:15px">
 Understanding of the Project
+</p>
 </div>
 </div>
 </section>
 <section id="section-3" class="slide level1">
 <h1></h1>
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Milestone
 </h3>
-<p><img src="4.png"></p>
+<p><img src="4.png" style="border:10px solid orangered"></p>
 </section>
 <section id="section-4" class="slide level1">
 <h1></h1>
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Milestone 1 RoadMap
 </h3>
-<p><img src="5.png"></p>
+<p><img src="5.png" style="border:10px solid orangered" ></p>
 </section>
 <section id="section-5" class="slide level1">
 <h1></h1>
-<div style="display:flex;width:100%;height:100%;">
-<div style="width:50%;height:700px;align-item:center;padding-top:32%;">
-<h2>
+<div
+style="display:flex;width:100%;height:100%;border:4px solid orangered">
+<div
+style="width:50%;height:700px;align-item:center;padding-top:32%;font-size:40px">
+<h2 style=";color:orangered">
 Milestone1
 </h2>
 <p>
@@ -89,15 +120,18 @@ Requirement Analysis
 </div>
 <div
 style="width:50%;height:700px;background-color:teal;align-item:center;padding-top:35%;">
+<p style="font-size:15px">
 Theme Prototype Ready
+</p>
 </div>
 </div>
 </section>
 <section id="section-6" class="slide level1">
 <h1></h1>
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Requirement Gathering…Data Source Analysis..1/2
 </h3>
+<div style="font-size:20px">
 <p>
 Total Data Source : 23
 </p>
@@ -107,14 +141,14 @@ Not available : 8
 <p>
 Available and Analysed : 15
 </p>
+</div>
 </section>
 <section id="section-7" class="slide level1">
 <h1></h1>
-<h2 id="data-sourceapi-not-available">Data Source:API Not available</h2>
-<h3>
+<p style="color:orangered;font-size:40px">
 Data Source:API Not available
-</h3>
-<table>
+</p>
+<table style="font-size:20px">
 <tr>
 <td>
 S.No.
@@ -248,10 +282,10 @@ through APIs
 </section>
 <section id="section-8" class="slide level1">
 <h1></h1>
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Data Source:API analysed…2/2
 </h3>
-<table>
+<table style="font-size:12px">
 <tr>
 <td>
 S.No.
@@ -492,10 +526,10 @@ Available and Analysed. Findings shared with Pankaj/Ravi
 </section>
 <section id="section-9" class="slide level1">
 <h1></h1>
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Data Source: Summary
 </h3>
-<ol>
+<ol style="font-size:20px">
 <li>
 Classification of data into master and transactional
 <ol style="list-style-type: lower-alpha;">
@@ -525,25 +559,27 @@ which master IGOD or S3WAAS to refer for state and district list?
 </section>
 <section id="section-10" class="slide level1">
 <h1></h1>
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Design Approach
 </h3>
-<p>
+<p style="font-size:20px">
 First Ingest Master Data
 </p>
-<p>
+<p style="font-size:20px">
 Resolve conflicts between Masters
 </p>
-<p>
+<p style="font-size:20px">
 Link to ingested masters while ingested masters while ingesting
 transactional dta
 </p>
 </section>
 <section id="section-11" class="slide level1">
 <h1></h1>
-<div style="display:flex;width:100%;height:100%;">
-<div style="width:50%;height:700px;align-item:center;padding-top:32%;">
-<h2>
+<div
+style="display:flex;width:100%;height:100%;border:4px solid orangered">
+<div
+style="width:50%;height:700px;align-item:center;padding-top:32%;font-size:40px">
+<h2 style=";color:orangered">
 S3WAAS
 </h2>
 <p>
@@ -558,10 +594,10 @@ style="width:50%;height:700px;background-color:teal;align-item:center;padding-to
 </section>
 <section id="section-12" class="slide level1">
 <h1></h1>
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Data Source:Findings(S3WAAS)..1/2
 </h3>
-<table>
+<table style="font-size:20px">
 <tr>
 <td>
 #
@@ -733,10 +769,10 @@ Under Analysis
 </tr>
 </table>
 #
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Data Source:Findings(S3WAAS)..1/2
 </h3>
-<table>
+<table style="font-size:20px">
 <tr>
 <td>
 #
@@ -854,8 +890,10 @@ Not available
 </tr>
 </table>
 #
-<div style="display:flex;width:100%;height:100%;">
-<div style="width:50%;height:700px;align-item:center;padding-top:32%;">
+<div
+style="display:flex;width:100%;height:100%;border:4px solid orangered">
+<div
+style="width:50%;height:700px;align-item:center;padding-top:32%;font-size:40px">
 <h2>
 IGOD
 </h2>
@@ -869,10 +907,10 @@ style="width:50%;height:700px;background-color:teal;align-item:center;padding-to
 </div>
 </div>
 #
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Data Source:Findings(IGOD)..1/2
 </h3>
-<table>
+<table style="font-size:20px">
 <tr>
 <td>
 #
@@ -1046,10 +1084,10 @@ Not available
 </section>
 <section id="section-13" class="slide level1">
 <h1></h1>
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Data Source:Findings(IGOD)..2/2
 </h3>
-<table>
+<table style="font-size:20px">
 <tr>
 <td>
 #
@@ -1108,8 +1146,11 @@ Conflicts with IGOD district master
 </td>
 </tr>
 </table>
-#
-<div style="display:flex;width:100%;height:100%;">
+</section>
+<section id="section-14" class="slide level1">
+<h1></h1>
+<div
+style="display:flex;width:100%;height:100%;border:4px solid orangered">
 <div style="width:50%;height:700px;align-item:center;padding-top:32%;">
 <h2>
 SANSAD
@@ -1124,12 +1165,12 @@ style="width:50%;height:700px;background-color:teal;align-item:center;padding-to
 </div>
 </div>
 </section>
-<section id="section-14" class="slide level1">
+<section id="section-15" class="slide level1">
 <h1></h1>
-<h3>
+<h3 style="font-size:40px;color:orangered">
 Data Source: sansad Findings()..1
 </h3>
-<table>
+<table style="font-size:20px">
 <tr>
 <td>
 #
@@ -1189,11 +1230,11 @@ Conflicts with IGOD district master
 </tr>
 </table>
 </section>
-<section id="section-15" class="slide level1">
+<section id="section-16" class="slide level1">
 <h1></h1>
-<h2 id="frontend-activities-being-done-so-far">Frontend Activities being
-done so far</h2>
-<ul style="list-style:disc">
+<p style="font-size:20px;color:orangered">
+Frontend Activities being done so far
+<ul style="list-style:disc;font-size:20px; ">
 <li>
 A faceted search prototype is develped and demonstrated for s3waas who’s
 who
@@ -1213,100 +1254,150 @@ Masters tables
 </li>
 </ul>
 </ul>
-<p>
+<p style="font-size:20px">
 Upcoming
 </p>
-<p>
+<p style="font-size:20px">
 UI MockUps(Landing page)
 </p>
-<p>
+<p style="font-size:20px">
 CMS use case
 </p>
 </section>
-<section id="section-16" class="slide level1">
-<h1></h1>
-<h3 id="cms-use-cases">CMS use cases</h3>
-<h4 id="functional-requirements">Functional Requirements</h4>
-<h6 id="newsletters">newsletters</h6>
-<h6 id="metadata-sectionseo">MetaData Section(SEO)</h6>
-<h6
-id="content-for-national-celebrations-republic-day-and-independence-day">content
-for National Celebrations (Republic day and Independence day)</h6>
-<h6 id="spotlights">spotlights</h6>
-<h6
-id="page-managementfor-pages-like-contact-us-about-us-etc-and-pages-based-on-user-profiling">page
-management(for pages like contact us, about us etc) and Pages based on
-user profiling</h6>
-<h6 id="adding-custom-attributes-to-the-data-like-tags">adding custom
-attributes to the data like Tags,</h6>
-<h6
-id="audit-management-in-strapiperhaps-available-in-enterprise-version">Audit
-management in Strapi(perhaps available in enterprise version)</h6>
-<h6 id="api-integration">API integration</h6>
-<h6 id="adding-people-group">adding People Group</h6>
-<p><br></p>
-<h3 id="non-functional-requirements">Non Functional Requirements</h3>
-<h5 id="third-party-authentication-implementation-using-keycloak.">Third
-party authentication implementation using keycloak.</h5>
-<h5 id="user-role-based-management-cms.">User role based management
-CMS.</h5>
-<h5 id="group-user-for-api-allowance.">Group user for api
-allowance.</h5>
-<h5 id="deploy-using-dockerkubernates.">Deploy using
-Docker/kubernates.</h5>
-<h5 id="multiple-instances-of-strpi.">Multiple instances of strpi.</h5>
-<h5 id="dashboards">Dashboards</h5>
-<h5 id="pipeline-workflowlike-source-of-each-pipeline..">Pipeline
-Workflow(like source of each pipeline..)</h5>
-</section>
 <section id="section-17" class="slide level1">
 <h1></h1>
-<h2 id="overview-of-pipeline-for-one-api-of-one-source">Overview of
-pipeline for one API of one source</h2>
-<p><img src="23.png"></p>
+<p style="font-size:40px;color:orangered;">
+CMS use cases
+</p>
+<p style="font-size:30px">
+Functional Requirements
+</p>
+<p style="font-size:20px">
+newsletters
+</p>
+<p style="font-size:20px">
+MetaData Section(SEO)
+</p>
+<p style="font-size:20px">
+content for National Celebrations (Republic day and Independence day)
+</p>
+<p style="font-size:20px">
+spotlights
+</p>
+<p style="font-size:20px">
+page management(for pages like contact us, about us etc) and Pages based
+on user profiling
+</p>
+<p style="font-size:20px">
+adding custom attributes to the data like Tags,
+</p>
+<p style="font-size:20px">
+Audit management in Strapi(perhaps available in enterprise version)
+</p>
+<p style="font-size:20px">
+API integration
+</p>
+<p style="font-size:20px">
+adding People Group
+</p>
+<br> <br>
+<p style="font-size:20px">
+Non Functional Requirements
+</p>
+<p style="font-size:20px">
+Third party authentication implementation using keycloak.
+</p>
+<p style="font-size:20px">
+User role based management CMS.
+</p>
+<p style="font-size:20px">
+Group user for api allowance.
+</p>
+<p style="font-size:20px">
+Deploy using Docker/kubernates.
+</p>
+<p style="font-size:20px">
+Multiple instances of strpi.
+</p>
+<p style="font-size:20px">
+Dashboards
+</p>
+<p style="font-size:20px">
+Pipeline Workflow(like source of each pipeline..)
+</p>
 </section>
 <section id="section-18" class="slide level1">
 <h1></h1>
-<h2 id="backend-activities-done-so-far">Backend Activities Done so
-far</h2>
-<ol type="1">
-<li>IGOD state pipeline</li>
-</ol>
-<ul>
-<li>IGOD state data acquisition task, data mapper task</li>
-</ul>
-<ol start="2" type="1">
-<li>Prototyping ongoing for a generic data store pipeline using topics
-and kafka connect ### Next</li>
-<li>S3WAAS state pipeline -Write S3WAAS state data acquisition pipeline,
-data mapper,</li>
-<li>Test S3WAAS state pipeline and IGOD state pipeline and see there are
-no conflicts with respect to start sequence</li>
-</ol>
+<p style="font-size:40px;color:orangered;">
+Overview of pipeline for one API of one source
+</p>
+<p><img src="23.png" style="border:10px solid orangered"></p>
 </section>
 <section id="section-19" class="slide level1">
 <h1></h1>
-<h2 id="devops-activities-being-so-far">Devops Activities being so
-far</h2>
-<p>
+<p style="font-size:40px;color:orangered;">
+Backend Activities Done so far
+</p>
+<ul style="font-size:20px">
+<li>
+IGOD state pipeline
+</li>
+<li>
+IGOD state data acquisition task, data mapper task
+</li>
+<li>
+Prototyping ongoing for a generic data store pipeline using
+</li>
+<li>
+Topic and Kafka connect
+</li>
+<li>
+Next
+</li>
+<li>
+S3WAAS state pipeline
+</li>
+<li>
+Write S3WAAS state data acquisition pipeline, data mapper,
+</li>
+<li>
+Test S3WAAS state pipeline
+</li>
+<li>
+There are no conflicts with respect to start sequence
+</li>
+</ul>
+<!-- <p style="font-size:20px">1.IGOD state pipeline</p>
+<p style="font-size:20px">2.IGOD state data acquisition task, data mapper task</p>
+<p style="font-size:20px">3. Prototyping ongoing for a generic data store pipeline using</p>
+<p style="font-size:20px">4.topics and kafka connect</p>
+<p style="font-size:20px">Next</p>
+<p style="font-size:20px">5. S3WAAS state pipeline</p>
+<p style="font-size:20px">6.Write S3WAAS state data acquisition pipeline, data mapper,</p>
+<p style="font-size:20px">7. Test S3WAAS state pipeline and IGOD state pipeline and see</p>
+<p style="font-size:20px">8. There are no conflicts with respect to start sequence</p> -->
+</section>
+<section id="section-20" class="slide level1">
+<h1></h1>
+<p style="font-size:40px;color:orangered;">
+Devops Activities being so far
+</p>
+<p style="font-size:20px">
 Activities
 </p>
-<ul>
+<ul style="font-size:20px">
 <li>
 HW requirements shared
 </li>
 <li>
-DB prototyping
+DB Prototyping
 </li>
-<li>
-<ul>
 <li>
 A mock data set of 1 lac records created
 </li>
 <li>
 Testing ongoing in postgres for:
 </li>
-<ul style="list-style:square">
 <li>
 Facet search
 </li>
@@ -1320,15 +1411,13 @@ Free text search
 Field level access control
 </li>
 </ul>
-</ul>
-</li>
-</ul>
 </section>
-<section id="section-20" class="slide level1">
+<section id="section-21" class="slide level1">
 <h1></h1>
-<h2 id="milestone-1-items-summary..12">Milestone 1 Items
-Summary..1/2</h2>
-<table>
+<p style="font-size:40px;color:orangered;">
+Milestone 1 Items Summary..1/2
+</p>
+<table style="font-size:20px">
 <tr>
 <td>
 Item
@@ -1425,11 +1514,12 @@ Would need a use case that stakeholders would like to see
 </tr>
 </table>
 </section>
-<section id="section-21" class="slide level1">
+<section id="section-22" class="slide level1">
 <h1></h1>
-<h2 id="milestone-1-items-summary..12-1">Milestone 1 Items
-Summary..1/2</h2>
-<table>
+<p style="font-size:40px;color:orangered;">
+Milestone 1 Items Summary..2/2
+</p>
+<table style="font-size:20px">
 <tr>
 <td>
 Item
@@ -1463,133 +1553,36 @@ Ongoing
 </tr>
 </table>
 </section>
-<section id="section-22" class="slide level1">
+<section id="section-23" class="slide level1">
 <h1></h1>
-<div style="display:flex;width:100%;height:100%;">
-<div style="width:50%;height:700px;align-item:center;padding-top:32%;">
-<h3>
+<div
+style="display:flex;width:100%;height:100%;border:4px solid orangered">
+<div
+style="width:50%;height:700px;align-item:center;padding-top:32%;font-size:40px">
+<h3 style="color:orangered">
 Current Project Team Organization
 </h3>
 </div>
 <div
 style="width:50%;height:700px;background-color:teal;align-item:center;padding-top:35%;">
-<h6>
+<p style="font-size:15px">
 Team Composition
-</h6>
+</p>
 </div>
 </div>
-</section>
-<section id="section-23" class="slide level1">
-<h1></h1>
-<h2 id="team-composition">Team Composition</h2>
-<table>
-<tr>
-<td>
-Item
-</td>
-<td>
-Status
-</td>
-<td>
-Remarks
-</td>
-</tr>
-<tr>
-<td>
-Requirements Gathering
-</td>
-<td>
-Ongoing
-</td>
-<td>
-SRS/Data Analysis/Architecture
-</td>
-</tr>
-<tr>
-<td>
-UI Mockups
-</td>
-<td>
-Ongoing
-</td>
-<td>
-Need to converge on UI landing page and navigation
-</td>
-</tr>
-<tr>
-<td>
-Data Acquisition Framework and Pipeline
-</td>
-<td>
-Ongoing
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-Authentication System and API GW
-</td>
-<td>
-Not Started
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-CMS setup
-</td>
-<td>
-Ongoing
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-Infra Setup
-</td>
-<td>
-Not Started
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-Datastore setup
-</td>
-<td>
-Not Started
-</td>
-<td>
-</td>
-</tr>
-<tr>
-<td>
-Prototype Demonstration
-</td>
-<td>
-Ongoing
-</td>
-<td>
-Would need a use case that stakeholders would like to see
-</td>
-</tr>
-</table>
 </section>
 <section id="section-24" class="slide level1">
 <h1></h1>
-<h2 id="milestone-1-items-summary..12-2">Milestone 1 Items
-Summary..1/2</h2>
-<table>
+<p style="font-size:40px;color:orangered">
+Team Composition
+</p>
+<table style="font-size:20px">
 <tr>
 <td>
 Role
 </td>
 <td>
-K&amp;A contact
+K&amp;A
 </td>
 <td>
 NIC Contact
@@ -1600,7 +1593,7 @@ NIC Contact
 Program Manager
 </td>
 <td>
-Nity Gupta
+Nitu Gupta
 </td>
 <td>
 Lokesh Sir
@@ -1614,7 +1607,7 @@ Project Manager
 Monika Verma
 </td>
 <td>
-Lokesh sir/Pankaj
+Lokesh Sir/Pankaj
 </td>
 </tr>
 <tr>
@@ -1629,23 +1622,22 @@ Varad Gupta
 </tr>
 <tr>
 <td>
-FrontEnd Team
+FrontEnd
 </td>
 <td>
-Deepak Negi/Farhan
+Deepak NegiFarhan
 </td>
 <td>
 </td>
 </tr>
 <tr>
 <td>
-Backend Team
+BackEnd Team
 </td>
 <td>
-Adarsh Verma/Barsha/Jai
+Adarsh/Verma/Barsha/Jai
 </td>
 <td>
-Pankaj/Mansi/Rakesh/Sandeep
 </td>
 </tr>
 <tr>
@@ -1670,7 +1662,7 @@ Manoj Mahanta
 </tr>
 <tr>
 <td>
-Document Lead
+Documentation Lead
 </td>
 <td>
 Monika Verma
@@ -1680,7 +1672,7 @@ Monika Verma
 </tr>
 <tr>
 <td>
-Tested Lead
+Test Lead
 </td>
 <td>
 Kapil Jain
@@ -1692,15 +1684,18 @@ Kapil Jain
 </section>
 <section id="section-25" class="slide level1">
 <h1></h1>
-<h3 id="project-organization-structure">Project Organization
-Structure</h3>
-<p><img src="30.png"></p>
+<p style="font-size:40px;color:orangered">
+Project Organization Structure
+</p>
+<p><img src="30.png" style="border:10px solid orangered"></p>
 </section>
 <section id="section-26" class="slide level1">
 <h1></h1>
-<div style="display:flex;width:100%;height:100%;">
-<div style="width:50%;height:700px;align-item:center;padding-top:32%;">
-<h2>
+<div
+style="display:flex;width:100%;height:100%;border:4px solid orangered">
+<div
+style="width:50%;height:700px;align-item:center;padding-top:32%;font-size:40px">
+<h2 style="color:orangered">
 Thank you
 </h2>
 </div>
